# Depth

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  DepthConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/DepthMapGenerator/: CMakeLists.txt  DepthMapGenerator.cpp  DepthMapGenerator.hpp
src/Components/DepthNormalEstimator/: CMakeLists.txt  DepthNormalEstimator.cpp  DepthNormalEstimator.hpp
src/Components/DepthTransform/: CMakeLists.txt  CMakeLists.txt~  DepthTransform.cpp  DepthTransform.cpp~  DepthTransform.hpp  DepthTransform.hpp~  Makefile  cmake_install.cmake
src/Components/NormalEstimator/: CMakeLists.txt  NormalEstimator.cpp  NormalEstimator.hpp
src/Components/PassThrough/: CMakeLists.txt  PassThrough.cpp  PassThrough.hpp
src/Components/Segmentation/: CMakeLists.txt  Segmentation.cpp  Segmentation.hpp
src/Types/: CMakeLists.txt
tasks/: log  log2  normal_estimation.xml  segmentation.xml  test.xml  test2.xml  test3.xml  test4.xml  test5.xml  test6.xml  test7.xml  test8.xml  test9.xml  test_all.xml
